--- a/assets/MyFirstPost.html
+++ b/assets/MyFirstPost.html
@@ -1,7 +1,7 @@
 ---
 title: My First Post
 description: This is the description of my first Post
-published_at: 2023-30-12
+published_at: 1 Jan 2023
 ---
 <h2>This is my first Post</h2>
 <p>You can edit the .html file to change the content.</p>
