--- a/tests/Data/blogpost.html
+++ b/tests/Data/blogpost.html
@@ -2,5 +2,7 @@
 title: ::title::
 description: ::description::
 published_at: 2000-10-05
+meta_title: ::metatitle::
+meta_description: ::metadescription::
 ---
 <p>Paco</p>
